added basic layout (keyboard); added AudioContext; added key->frequency function

--- a/index.html
+++ b/index.html
@@ -4,17 +4,40 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Web Midi Synth</title>
-	<link rel="stylesheet" href="style/main.css"> 
+	<link rel="stylesheet" href="style/main.css">
 	<script src="app/jquery-3.1.1.min.js"></script>
-	<script src="app/web_app.js"></script>
+	<script src="app/layout_app.js"></script>
 	<script src="app/audio_app.js"></script>
-	</head>
+</head>
 
 <body>
-	
-	
-	
-	
+	<div class="main_window"></div>
+	<div class="keys">
+		<ul class="set">
+			<li class="white f" data-note="f3"></li>
+			<li class="black fs" data-note="fs3"></li>
+			<li class="white g" data-note="g3"></li>
+			<li class="black gs" data-note="gs3"></li>
+			<li class="white a" data-note="a3"></li>
+			<li class="black as" data-note="as3"></li>
+			<li class="white b" data-note="b3"></li>
+			<li class="white c" data-note="c4"></li>
+			<li class="black cs" data-note="cs4"></li>
+			<li class="white d" data-note="d4"></li>
+			<li class="black ds" data-note="ds4"></li>
+			<li class="white e" data-note="e4"></li>
+			<li class="white f" data-note="f4"></li>
+			<li class="black fs" data-note="fs4"></li>
+			<li class="white g" data-note="g4"></li>
+			<li class="black gs" data-note="gs4"></li>
+			<li class="white a" data-note="a4"></li>
+			<li class="black as" data-note="as4"></li>
+			<li class="white b" data-note="b4"></li>
+			<li class="white c" data-note="c5"></li>
+			<li class="black cs" data-note="cs5"></li>
+			<li class="white d" data-note="d5"></li>
+		</ul>
+	</div>
 </body>
 
 </html>
