added browser keyboard events- WORKINGgit add .!

--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
 	<div class="main_window"></div>
 	<div class="keys">
 		<ul class="set">
-			<li class="white f" data-note="f3"></li>
-			<li class="black fs" data-note="fs3"></li>
-			<li class="white g" data-note="g3"></li>
-			<li class="black gs" data-note="gs3"></li>
-			<li class="white a" data-note="a3"></li>
-			<li class="black as" data-note="as3"></li>
-			<li class="white b" data-note="b3"></li>
-			<li class="white c" data-note="c4"></li>
-			<li class="black cs" data-note="cs4"></li>
-			<li class="white d" data-note="d4"></li>
-			<li class="black ds" data-note="ds4"></li>
-			<li class="white e" data-note="e4"></li>
-			<li class="white f" data-note="f4"></li>
-			<li class="black fs" data-note="fs4"></li>
-			<li class="white g" data-note="g4"></li>
-			<li class="black gs" data-note="gs4"></li>
-			<li class="white a" data-note="a4"></li>
-			<li class="black as" data-note="as4"></li>
-			<li class="white b" data-note="b4"></li>
-			<li class="white c" data-note="c5"></li>
-			<li class="black cs" data-note="cs5"></li>
-			<li class="white d" data-note="d5"></li>
+			<li class="white f" data-note="53"></li>
+			<li class="black fs" data-note="54"></li>
+			<li class="white g" data-note="55"></li>
+			<li class="black gs" data-note="56"></li>
+			<li class="white a" data-note="57"></li>
+			<li class="black as" data-note="58"></li>
+			<li class="white b" data-note="59"></li>
+			<li class="white c" data-note="60"></li>
+			<li class="black cs" data-note="61"></li>
+			<li class="white d" data-note="62"></li>
+			<li class="black ds" data-note="63"></li>
+			<li class="white e" data-note="64"></li>
+			<li class="white f" data-note="65"></li>
+			<li class="black fs" data-note="66"></li>
+			<li class="white g" data-note="67"></li>
+			<li class="black gs" data-note="68"></li>
+			<li class="white a" data-note="69"></li>
+			<li class="black as" data-note="70"></li>
+			<li class="white b" data-note="71"></li>
+			<li class="white c" data-note="72"></li>
+			<li class="black cs" data-note="73"></li>
+			<li class="white d" data-note="74"></li>
 		</ul>
 	</div>
 </body>
