--- a/index.html
+++ b/index.html
@@ -6,26 +6,38 @@
 	<title>Web Midi Synth</title>
 	<link rel="stylesheet" href="style/main.css">
 	<script src="app/jquery-3.1.1.min.js"></script>
-	<script src="app/layout_app.js"></script>
-	<script src="app/audio_app.js"></script>
-	<script src="https://cdn.jsdelivr.net/jquery/1.11.3/jquery.min.js"></script>
+<!--	<script src="https://cdn.jsdelivr.net/jquery/1.11.3/jquery.min.js"></script>-->
 	<link href="https://cdn.jsdelivr.net/jquery.roundslider/1.3/roundslider.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/jquery.roundslider/1.3/roundslider.min.js"></script>
+	<script src="app/layout_app.js"></script>
+	<script src="node_modules/tunajs/tuna-min.js"></script>
+	<script src="app/audio_app.js"></script>
 	<script src="app/jquery.hotkeys.js"></script>
 </head>
 
 <body>
+	<canvas class="oscilloscope"></canvas>
 	<div class="main_window">
 		<div class="oscillator">
-			<div class="generator"> OSCILLATOR </div>
-			<div id="slider"></div>
-			<div class="osc_env"> oscillator envelope </div>
+			<div class="generator"> OSCILLATOR
+				<div id="slider"></div>
+				<form class="waves">
+					<input type="radio" name="basic_wave" value="sine" checked>Sine
+					<input type="radio" name="basic_wave" value="square">Square
+					<input type="radio" name="basic_wave" value="sawtooth">sawtooth
+					<input type="radio" name="basic_wave" value="triangle">Triangle </form>
+			</div>
+			<div class="osc_env"> Visalisation </div>
 		</div>
 		<div class="filter"> FILTER</div>
-		<div class="effects"> EFFECTS</div>
+		<div class="effects">
+			<div class="reverb">REV</div>
+			<div class="delay">DEL</div>
+			<div class="lo-fi">PHASe</div>
+		</div>
 		<div class="amplifier">AMPLIFIER
 			<div class="amp_env">amplifier envelope</div>
-			<div class="transposition">transposition:</div>
+			<div class="transposition">transposition: <span id='oct_up'>+</span><span id='counter'></span><span id='oct_down'></span> </div>
 		</div>
 		<!--			<div class="visualization"></div>--></div>
 	<div class="keys">
