--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https://cdn.jsdelivr.net/jquery.roundslider/1.3/roundslider.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/jquery.roundslider/1.3/roundslider.min.js"></script>
 	<script src="app/layout_app.js"></script>
-	<script src="node_modules/tunajs/tuna-min.js"></script>
+	<script src="app/tuna-min.js"></script>
 	<script src="app/audio_app.js"></script>
 	<script src="app/jquery.hotkeys.js"></script>
 </head>
